--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p class="ab" id="d">Cards:</p>
     <p class="ab" id="e">Sums:</p>
     <button onclick="a()">Play game</button>
-    <script src="netlify/function/index.js"></script>
+    <script src="netlify/functions/index.js"></script>
 
 </body>
 </html>
